basic-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
  namespace: my-ns # will need to use the -n my-ns flag in order to get/describe this pod
  labels:
    app: myapp
spec:
  containers:
    - name: myapp-container
      image: busybox
      command: ['sh', '-c', 'echo Hello Kubernetes! && sleep 3600']
      ports:
        - containerPort: 80
