multi-container-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod
spec:
  containers:
    - name: nginx
      image: nginx
      ports:
        containerPort: 80
    - name: busybox-sidecar
      image: busybox
      command: ['sh', '-c', 'while true; do sleep 30; done;']
