my-pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pvc-pod
spec:
  containers:
  - name: my-pvc-container
    image: busybox
    command: ["/bin/sh", "-c", "while true; do sleep 3600; done"]
    volumeMounts:
    - name: my-storage
      path: "/mnt/storage"
  volumes:
  - name: my-storage
    persistentVolumeClaim:
      claimName: my-pvc
