resource-requirements-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-securitycontext-pod
spec:
  containers:
  - name: myapp-container
    image: busybox
    resources:
      requests: # specifies amount of resources necessary on a node for this container to run
        memory: "64Mi" # megabytes
        cpu: "250m" # 250 "milliCPU" (1 milliCPU is 1/1000th of a cpu core) aka 25% of a cpu core
      limits: # max resources that this container can utilize.. restart will occur if limits exceeded
        memory: "128Mi"
        cpu: "500m"
