volume-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volume-pod
spec:
  containers:
  - name: volume-pod-container
    image: busybox
    ports:
    - containerPort: 80
    volumeMounts:
    - name: my-volume # this name must match an existing volume name
      mountPath: /tmp/storage # the location inside the container where storage will be mounted
  volumes:
  - name: my-volume
    emptyDir: {} # creates an empty directory on the node (persists beyond life of container)
